--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -28,7 +28,7 @@
                 <div id="@editorId" class="monaco"></div>
             </section>
         </div>
-        <div class="top-section-group top-section-group-results">
+        <div class="top-section-group top-section-group-results" style="display : none">
             <section class="top-section result">
                 <header>
                     <h1>Output</h1>
@@ -46,19 +46,14 @@
                         </select>
                     </div>
                 </header>
-                <div class="content">
+                <div class="content" > 
                     <div class="CodeMirror cm-s-default mirrorsharp-theme">
                         <div style="overflow: hidden; position: relative; width: 3px; height: 0px; top: 291.95px; left: 30.3899px;">
                             <textarea autocorrect="off" autocapitalize="off" spellcheck="false" readonly="" tabindex="0" style="position: absolute; bottom: -1em; padding: 0px; width: 1000px; height: 1em; outline: none;"> </textarea>
                         </div><div class="CodeMirror-vscrollbar" tabindex="-1" cm-not-content="true">
                             <div style="min-width: 1px; height: 0px;"></div>
                         </div>
-                        @*<div class="CodeMirror-hscrollbar" tabindex="-1" cm-not-content="true" style="display: block; right: 0px; left: 0px;">
-                            <div style="height: 100%; min-height: 1px; width: 1780.6px;"></div>
-                        </div>*@
-                        @*<div class="CodeMirror-scrollbar-filler" cm-not-content="true"></div><div class="CodeMirror-gutter-filler" cm-not-content="true"></div>*@
                         <div> @result</div>
-
                     </div>
                 </div>
             </section>
@@ -73,9 +68,9 @@
 </body>
 
 @code {
-    private readonly string editorId = Data.Constants.csharpId;
+    private static readonly string editorId = Data.Constants.csharpId;
     private string code { get; set; } = Data.Constants.defultCode;
     private string share {get;set;} = "分享代码";
     private string @s {get;set;} = "开发中……";
-    
+
 }
