快捷键和格式化

--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -1,5 +1,8 @@
 ﻿@page "/"
+@page "/index"
+@page "/codeshare/{gistId}"
 @using RoslynCat.Data
+@inject NavigationManager NavigationManager
 
 <body class="theme-dark root-status-default">
     <main>
@@ -15,14 +18,14 @@
                 <header>
                     <h1>Chooes-Language</h1>
                     <div class="select-wrapper option-language option online-only">
-                        <select aria-label="Code Language" tabindex="1"><option value="C#">C#</option>
-                            <option value="Visual Basic">Visual Basic</option>
-                            <option value="F#">F#</option>
+                        <select aria-label="Code Language" tabindex="1">
+                            <option value="C#">C#</option>
+                            @*<option value="Visual Basic">Visual Basic</option>
+                            <option value="F#">F#</option>*@
                         </select>
                     </div>
                     <button @onclick="Test">测试</button>
-                    @*<button @onclick="CodeSharing">分享代码</button>*@
-                    <button @onclick=" ()=> share = s ">@share</button>
+                    <button @onclick="CodeSharing">分享代码</button>
                     <label> @shareId</label>
                 </header>
                 <div id="@editorId" class="monaco"></div>
@@ -36,7 +39,8 @@
                         <select aria-label="Output Mode" tabindex="4">
                             <optgroup label="Decompile"><option value="C#">C#</option><option value="IL">IL</option></optgroup>
                             @*<optgroup label="Other"><option value="AST">Syntax Tree</option><option value="Verify">Verify Only</option><option value="Explain">Explain</option></optgroup>*@
-                            <optgroup label="Experimental"><option value="Run">Run</option></optgroup></select>
+                            <optgroup label="Experimental"><option value="Run">Run</option></optgroup>
+                        </select>
                     </div>
                     <h1>编译模式</h1>
                     <div class="select-wrapper option-language option online-only">
@@ -46,7 +50,7 @@
                         </select>
                     </div>
                 </header>
-                <div class="content" > 
+                <div class="content">
                     <div class="CodeMirror cm-s-default mirrorsharp-theme">
                         <div style="overflow: hidden; position: relative; width: 3px; height: 0px; top: 291.95px; left: 30.3899px;">
                             <textarea autocorrect="off" autocapitalize="off" spellcheck="false" readonly="" tabindex="0" style="position: absolute; bottom: -1em; padding: 0px; width: 1000px; height: 1em; outline: none;"> </textarea>
@@ -70,7 +74,6 @@
 @code {
     private static readonly string editorId = Data.Constants.csharpId;
     private string code { get; set; } = Data.Constants.defultCode;
-    private string share {get;set;} = "分享代码";
-    private string @s {get;set;} = "开发中……";
-
+    private string share { get; set; } = "分享代码";
+    private string @s { get; set; } = "开发中……";
 }
