改了编辑器初始化的bug

--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -24,7 +24,7 @@
                             <option value="F#">F#</option>*@
                         </select>
                     </div>
-                    <button @onclick="Test">测试</button>
+                    <button @onclick="Test">运行</button>
                     <button @onclick="CodeSharing">分享代码</button>
                     <button @onclick="AskGPT">@askGpt</button>
                     <label style="display:none;"> @s</label>
