--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -14,35 +14,20 @@
         </div>
         <button class="mobile-settings-button" aria-label="Settings" tabindex="1"></button><div class="mobile-offline-notice">connection lost, reconnecting…</div>
         <div class="top-section-group top-section-group-code">
+
             <section class="top-section code">
-                <header>
-                    <h1>Chooes-Language</h1>
-                    <div class="select-wrapper option-language option online-only">
-                        <select aria-label="Code Language" tabindex="1">
-                            <option value="C#">C#</option>
-                            @*<option value="Visual Basic">Visual Basic</option>
-                            <option value="F#">F#</option>*@
-                        </select>
-                    </div>
+                <header id="title">
                     <button @onclick="Test">运行</button>
                     <button @onclick="CodeSharing">分享代码</button>
                     <button @onclick="AskGPT">@askGpt</button>
-                    @*<label style="display:none;"> @s</label>*@
                 </header>
                 <div id="@editorId" class="monaco"></div>
             </section>
         </div>
-        <div class="top-section-group top-section-group-results" style="">
+        <div class="top-section-group top-section-group-results" >
             <section class="top-section result">
                 <header>
-                    <h1>Output</h1>
-                    <div class="select-wrapper option-target option online-only">
-                        <select aria-label="Output Mode" tabindex="4">
-                            <optgroup label="Decompile"><option value="C#">C#</option><option value="IL">IL</option></optgroup>
-                            @*<optgroup label="Other"><option value="AST">Syntax Tree</option><option value="Verify">Verify Only</option><option value="Explain">Explain</option></optgroup>*@
-                            <optgroup label="Experimental"><option value="Run">Run</option></optgroup>
-                        </select>
-                    </div>
+
                     <h1>编译模式</h1>
                     <div class="select-wrapper option-language option online-only">
                         <select aria-label="Code Language" tabindex="1">
@@ -52,27 +37,13 @@
                     </div>
 
                 </header>
-                    <div id="@resultId" class="monaco"> </div>
-
-                <div class="content">
-                    @*<div id="resultId" class="monaco"> @result</div>*@
-                    @*<div class="CodeMirror cm-s-default mirrorsharp-theme">
-                        <div style="overflow: hidden; position: relative; width: 3px; height: 0px; top: 291.95px; left: 30.3899px;">
-                            <textarea autocorrect="off" autocapitalize="off" spellcheck="false" readonly="" tabindex="0" style="position: absolute; bottom: -1em; padding: 0px; width: 1000px; height: 1em; outline: none;"> </textarea>
-                        </div><div class="CodeMirror-vscrollbar" tabindex="-1" cm-not-content="true">
-                            <div style="min-width: 1px; height: 0px;"></div>
-                        </div>
-                       
-                    </div>*@
+                <div id="@resultId" class="monaco"> 
                 </div>
             </section>
         </div>
     </main>
     <footer>
-        <div class="cm6-preview-manager block-with-label">
-            <label for=":r0:">Editor:</label>
-            <button id=":r0:" aria-label="Editor Toggle, Current: Default">Default</button>
-        </div><div class="mobile-font-size-manager block-with-label"><label for=":r1:">Font Size:</label><button id=":r1:" aria-label="Font Size Toggle, Current: M">M</button></div>
+        <a href="https://github.com/SIGEER2222/RoslynCat">RolsynCat in Github</a>
     </footer>
 </body>
 
