--- a/src/RolsynCat/wwwroot/css/site.css
+++ b/src/RolsynCat/wwwroot/css/site.css
@@ -2,6 +2,9 @@
     height: 100%;
     width: 100%;
 }
+div {
+    border-radius: 5px;
+}
 
 #blazor-error-ui {
     background: lightyellow;
@@ -74,3 +77,120 @@
         text-decoration: none;
         cursor: pointer;
     }
+
+
+
+/*
+    聊天框的样式
+*/
+.chat-container {
+    display: flex;
+    flex-direction: column;
+    height: 80%;
+    width: 100%;
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px;
+    box-sizing: border-box;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+.chat-messages {
+    flex-grow: 1;
+    overflow-y: auto;
+
+}
+
+.chat-message {
+    clear: both;
+    margin-bottom: 10px;
+    display: flex;
+    justify-content: flex-start;
+}
+
+.system-message {
+    float: left;
+    background-color: #dcdcdc;
+    color: #333;
+    max-width: 80%;
+}
+
+.user-message {
+    float: right;
+    background-color: #007bff;
+    color: #fff;
+    max-width: 80%;
+}
+
+.message-bubble {
+    padding: 5px 10px;
+    border-radius: 5px;
+    border-radius: 5px;
+}
+
+.chat-input {
+    display: flex;
+    align-items: center;
+    margin-top: 10px;
+}
+
+    .chat-input input {
+        flex-grow: 1;
+        margin-right: 10px;
+        padding: 5px 10px;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        font-size: 16px;
+        color:black;
+    }
+
+.send-button {
+    padding: 5px 10px;
+    border: none;
+    border-radius: 5px;
+    background-color: #007bff;
+    color: #fff;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+
+/*弹窗的样式*/
+.my-component-modal {
+    position: fixed;
+    z-index: 9999;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.my-component-content {
+    background-color: #fff;
+    border-radius: 5px;
+    padding: 20px;
+    box-sizing: border-box;
+    position: relative;
+    max-width: 800px;
+    width: 100%;
+    max-height: 80%;
+    overflow: auto;
+}
+
+.close-button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    padding: 5px 10px;
+    border: none;
+    border-radius: 5px;
+    background-color: #007bff;
+    color: #fff;
+    font-size: 16px;
+    cursor: pointer;
+}
