增加配置、实现拖动条

--- a/src/RolsynCat/Pages/Index.razor
+++ b/src/RolsynCat/Pages/Index.razor
@@ -32,6 +32,8 @@
             <div id="@editorId" class="monaco"></div>
         </div>
 
+        <div class="handle"></div>
+
         <div class="right-pane resizable">
             <div id="@resultId" class="monaco">
             </div>
