--- a/src/RolsynCat/wwwroot/css/site.css
+++ b/src/RolsynCat/wwwroot/css/site.css
@@ -469,7 +469,7 @@
     /*flex-direction: row;
     align-items: center;
     justify-content: center;*/
-    margin: 20px;
+    /*margin: 20px;*/
 }
 
 .textarea-container {
